--- a/src/app/application-dialog/application-dialog.component.html
+++ b/src/app/application-dialog/application-dialog.component.html
@@ -7,5 +7,5 @@
 </div>
 <div md-dialog-action>
   <button md-button (click)="onCancel()">CANCEL</button>
-  <button md-button (click)="onCreate()">CREATE</button>
+  <button md-button md-raised-button color="primary" (click)="onCreate()">CREATE</button>
 </div>
