--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+/*@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';*/
+
 /* You can add global styles to this file, and also import other style files */
 md-sidenav-layout.m2app-dark {
   background: black;
