--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
 <md-toolbar color="primary">
-    <button class="app-icon-button" (click)="sidenav.toggle()">
-      <i class="material-icons app-toolbar-menu">menu</i>
-    </button>
-
-      Angular Material2 Example App
-
+    Stuberry
     <span class="app-toolbar-filler"></span>
 </md-toolbar>
 
