--- a/src/app/application-dialog/application-dialog.component.html
+++ b/src/app/application-dialog/application-dialog.component.html
@@ -1,11 +1,12 @@
-
-<h1 md-dialog-title>Create new application</h1>
+<h1 md-dialog-title>Create Application</h1>
 <div md-dialog-content>
-  <md-input-container>
-      <input mdInput placeholder="Application Name" >
+  <md-input-container class="application-dialog">
+    <input mdInput #appName placeholder="Name"
+         (keyup.enter)="onCreate(appName.value)"
+         (keyup.escape)="onCancel()">
   </md-input-container>
 </div>
 <div md-dialog-action>
   <button md-button (click)="onCancel()">CANCEL</button>
-  <button md-button md-raised-button color="primary" (click)="onCreate()">CREATE</button>
+  <button md-button md-raised-button color="primary" (click)="onCreate(appName.value)">CREATE</button>
 </div>
