--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+/*@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';*/
 
 /* You can add global styles to this file, and also import other style files */
+
+body {
+ font-family: Roboto,"Helvetica Neue",sans-serif; 
+}
+
 md-sidenav-layout.m2app-dark {
   background: black;
 }
