--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,17 +3,4 @@
     <span class="app-toolbar-filler"></span>
 </md-toolbar>
 
-<div class="flex-container" 
-     fxLayout="row" 
-     fxLayoutWrap
-     fxLayoutAlign="start center">
-     <div *ngFor="let application of applications" >
-       <application-entry [application]="application" (click)="onSelect(application)" ></application-entry>
-    </div>
-</div>
-  
-<span class="app-action" (click)="onCreate()">
-  <button md-fab >
-    <md-icon>add</md-icon>
-  </button>
-</span>
+<router-outlet></router-outlet>
